Some whitespace fixes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,7 +42,7 @@ a {
 	min-height: 360px;
 	// width: 85%;
 	max-width: 328px;
-	padding: 2.2em 1.6em;
+	padding: 1.6em 1.6em 2.1em;
 	background-color: $dark-blue;
 	border-radius: 1em;
 
@@ -51,13 +51,13 @@ a {
 	}
 
 	&__evaluation-circle-star {
-		padding: 1em;
+		padding: 0.8em;
 		background-color: $medium-grey;
 		border-radius: 50%;
 	}
 
 	&__evaluation-headline {
-		margin: 0.8em 0 0.6em;
+		margin: 1em 0;
 		color: $white;
 		font-size: 2.2rem;
 	}
